fix(css): Avoid vertical scrollbar to appear in .gantt-body-rows
Close #519

--- a/assets/angular-gantt.css
+++ b/assets/angular-gantt.css
@@ -152,6 +152,7 @@
 
 .gantt-body-rows {
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .gantt-body-background {
